Add loading message for when app wakes after sleep
I put an alt attribute in the embed tag, hopefully that will work.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             overflow-y: auto; 
             overflow-x: hidden; 
         } 
-    </style>
+		</style>
         <meta name="description" content="Embedding Stock Analysis Dashboard app from Heroku.">
     </head>
     
@@ -35,6 +35,7 @@
                 marginwidth="0" 
                 width="100%" 
                 height="100%" 
-                scrolling="auto">
+                scrolling="auto"
+				alt="Loading, may take about half a minute...">
     </body>
 </html>
