Add header and remove alt property of embed tag
The header contains a link back to the index of my website.

--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
             overflow-y: auto; 
             overflow-x: hidden; 
         } 
+            
+        header {
+            text-align: center;
+        }
 		</style>
         <meta name="description" content="Embedding Stock Analysis Dashboard app from Heroku.">
     </head>
     
     <body>
+        <header><a href="https://kurushiidrive.github.io">Home</a> > Stock Price Analysis Dashboard</header>
         <embed src="https://kurushiid-stock-dashboard.herokuapp.com/" 
                 frameborder="0" 
                 marginheight="0" 
                 marginwidth="0" 
                 width="100%" 
                 height="100%" 
-                scrolling="auto"
-				alt="Loading, may take about half a minute...">
+                scrolling="auto">
     </body>
 </html>
